--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <span class="section_subtitle">My Introduction</span>
 
                 <div class="about_container container grid">
-                    <img src="/assets/img/abouts.png" alt="" class="about_img">
+                    <img src="https://shashishekharazad.github.io//assets/img/abouts.png" alt="" class="about_img">
 
                     <div class="about_data">
                         <p class="about_description">Pursuing Bachelor degree in Computer Science and Engineering from Dr. A.P.J. Abdul Kalam Technical University, Lucknow. Currently I'm in 3rd year of my graduation. I am good at problem solving and logic building. I am interested in Software Development Engineering and looking for internship.</p>
@@ -146,7 +146,7 @@
                         </div>
 
                         <div class="about_buttons">
-                            <a download="" href="/assets/pdf/Shashi-Cv.pdf" class="button button--flex">
+                            <a download="" href="https://shashishekharazad.github.io/assets/pdf/Shashi-Cv.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt"></i>
                             </a>
                         </div>
@@ -598,7 +598,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="/assets/img/portfolio1.png" alt="" class="portfolio_img">
+                            <img src="https://shashishekharazad.github.io/assets/img/portfolio1.png" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Modern Website</h3>
@@ -611,7 +611,7 @@
                         </div>
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="/assets/img/portfolio2.jpg" alt="" class="portfolio_img">
+                            <img src="https://shashishekharazad.github.io/assets/img/portfolio2.jpg" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Brand design </h3>
@@ -624,7 +624,7 @@
                         </div>
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="/assets/img/portfolio3.png" alt="" class="portfolio_img">
+                            <img src="https://shashishekharazad.github.io/assets/img/portfolio3.png" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Portfolio Website</h3>
@@ -664,7 +664,7 @@
                             </a>
                         </div>
 
-                        <img src="/assets/img/project.png" alt="" class="project_img">
+                        <img src="https://shashishekharazad.github.io/assets/img/project.png" alt="" class="project_img">
                     </div>
                 </div>
             </section>
@@ -680,7 +680,7 @@
                         <div class="testimonial_content swiper-slide">
                             <div class="testimonial_data">
                                 <div class="testimonial_header">
-                                    <img src="/assets/img/testimonial1.jpg" alt="" class="testimonial_img">
+                                    <img src="https://shashishekharazad.github.io/assets/img/testimonial1.jpg" alt="" class="testimonial_img">
 
                                     <div>
                                         <h3 class="testimonial_name">Madhu </h3>
@@ -704,7 +704,7 @@
                           <div class="testimonial_content swiper-slide">
                             <div class="testimonial_data">
                                 <div class="testimonial_header">
-                                    <img src="/assets/img/testimonial2.jpg" alt="" class="testimonial_img">
+                                    <img src="https://shashishekharazad.github.io/assets/img/testimonial2.jpg" alt="" class="testimonial_img">
 
                                     <div>
                                         <h3 class="testimonial_name">Sandeep Yadav</h3>
@@ -728,7 +728,7 @@
                           <div class="testimonial_content swiper-slide">
                             <div class="testimonial_data">
                                 <div class="testimonial_header">
-                                    <img src="/assets/img/testimonial3.jpg" alt="" class="testimonial_img">
+                                    <img src="https://shashishekharazad.github.io/assets/img/testimonial3.jpg" alt="" class="testimonial_img">
 
                                     <div>
                                         <h3 class="testimonial_name">Er. PK Maurya </h3>
