--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                         <div class="testimonial_content swiper-slide">
                             <div class="testimonial_data">
                                 <div class="testimonial_header">
-                                    <img src="/assets/img/testimonial1.jpg" alt="" class="testimonial_img">
+                                    <img src="../assets/img/testimonial1.jpg" alt="" class="testimonial_img">
 
                                     <div>
                                         <h3 class="testimonial_name">Madhu </h3>
