--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
         
         <!--==================== SWIPER CSS ====================-->
-        <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
         
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -125,7 +125,7 @@
                 <span class="section_subtitle">My Introduction</span>
 
                 <div class="about_container container grid">
-                    <img src="/assets/img/abouts.png" alt="" class="about_img">
+                    <img src="assets/img/abouts.png" alt="" class="about_img">
 
                     <div class="about_data">
                         <p class="about_description">Pursuing Bachelor degree in Computer Science and Engineering from Dr. A.P.J. Abdul Kalam Technical University, Lucknow. Currently I'm in 3rd year of my graduation. I am good at problem solving and logic building. I am interested in Software Development Engineering and looking for internship.</p>
@@ -146,7 +146,7 @@
                         </div>
 
                         <div class="about_buttons">
-                            <a download="" href="/assets/pdf/Shashi-Cv.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/Shashi-Cv.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt"></i>
                             </a>
                         </div>
@@ -597,7 +597,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="/assets/img/portfolio1.png" alt="" class="portfolio_img">
+                            <img src="assets/img/portfolio1.png" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Modern Website</h3>
@@ -610,7 +610,7 @@
                         </div>
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="/assets/img/portfolio2.jpg" alt="" class="portfolio_img">
+                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Brand design </h3>
@@ -623,7 +623,7 @@
                         </div>
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="/assets/img/portfolio3.png" alt="" class="portfolio_img">
+                            <img src="assets/img/portfolio3.png" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Portfolio Website</h3>
@@ -663,7 +663,7 @@
                             </a>
                         </div>
 
-                        <img src="/assets/img/project.png" alt="" class="project_img">
+                        <img src="assets/img/project.png" alt="" class="project_img">
                     </div>
                 </div>
             </section>
